# orbital_simulation

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
examples/: hohmann_transfer.ipynb  inner_solar_system.ipynb  solar_system.ipynb
orbital_simulation/: __init__.py  default_planets.toml  rigidbodies.py  simulation.py  version.py
